# worker_core

./: .gitignore  Cargo.toml  README.md  claude.md  config.toml.example
migrations/: 0001_initial.sql  0002_memories.sql
src/: config.rs  error.rs  lib.rs  main.rs  state.rs  types.rs
src/api/: agent.rs  chat.rs  health.rs  memories.rs  messages.rs  mod.rs  models.rs  sessions.rs
src/context/: mod.rs
src/db/: memories.rs  messages.rs  mod.rs  sessions.rs
src/memory/: mod.rs
src/model/: downloader.rs  engine.rs  mod.rs  presets.rs  tokenizer.rs
src/tools/: mod.rs  parser.rs
tests/: api_test.rs
