[package]
name = "co_worker_lite"
version = "0.1.0"
edition = "2024"
description = "Local LLM backend service with chat API and SQLite-backed sessions"
license = "MIT OR Apache-2.0"

[lib]
name = "co_worker_lite"
path = "src/lib.rs"

[[bin]]
name = "co_worker_lite"
path = "src/main.rs"

[features]
default = []
metal = ["llama-cpp-2/metal"]
cuda = ["llama-cpp-2/cuda"]
vulkan = ["llama-cpp-2/vulkan"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"

# HTTP server
axum = { version = "0.8.9", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8.6", default-features = false, features = [
    "sqlite",
    "runtime-tokio",
    "runtime-tokio-rustls",
    "macros",
    "migrate",
    "chrono",
    "uuid",
] }

# LLM inference (llama.cpp bindings)
llama-cpp-2 = "0.1.146"

# Streaming HTTP downloads with resume support (replaces hf-hub for finer
# control over progress reporting and partial-file resume)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }

# Progress bars
indicatif = "0.18"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Configuration
config = { version = "0.15", default-features = false, features = ["toml"] }

# CLI parsing (for --preset / --list-presets at the binary level)
clap = { version = "4.6", features = ["derive"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
sha2 = "0.10"
hex = "0.4"
async-trait = "0.1"
encoding_rs = "0.8"

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
